# noob_key

./: .env  Cargo.toml  README.md  main.db
src/: db.rs  handler.rs  main.rs  utils.rs
